sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:14: error: illegal start of statement
    else if (i<dbtRouge && getCouleur(i)==ROUGE){
    ^